--- a/00.간단한 노트북 사용법.ipynb
+++ b/00.간단한 노트북 사용법.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8fec7ab3",
+   "id": "ac0d19cf",
    "metadata": {},
    "source": [
     "# Heading 1\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1eb6d167",
+   "id": "acf2e346",
    "metadata": {},
    "source": [
     "- level 1\n",
@@ -23,12 +23,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0a18c3f",
+   "id": "d8c48edd",
    "metadata": {},
    "source": [
     "### 테이블\n",
     "| 컬럼 1 | 컬럼 2 | 컬럼 3 |\n",
-    "+--------+--------+--------+\n",
+    "|--------|--------|--------|\n",
     "| 내용 1 | 내용 2 | 내용 3 |"
    ]
   },
@@ -39,12 +39,60 @@
     }
    },
    "cell_type": "markdown",
-   "id": "810a83a9",
+   "id": "f9af4aa6",
    "metadata": {},
    "source": [
     "### 이미지 \n",
     "![image.png](attachment:image.png)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "1d9af570",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = 10 + 20"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "2893fb6e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b9e2febb",
+   "metadata": {},
+   "source": [
+    "만약에 노트북 셀을 처음부터 순서대로 실행 순서를 맞춰야 할 경우\n",
+    "Kernel > Restart & Run All 메뉴로 전체 실행 순서를 맞춰주는 것을 추천"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fed6d683",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
